--- a/COMP229-f2016-Lesson8/Web.config
+++ b/COMP229-f2016-Lesson8/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-COMP229-f2016-Lesson8-20161102074429.mdf;Initial Catalog=aspnet-COMP229-f2016-Lesson8-20161102074429;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="MusicStoreConnection" connectionString="data source=(LocalDb)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\aspnet-COMP229-f2016-Lesson8-20161102074429.mdf;initial catalog=aspnet-COMP229-f2016-Lesson8-20161102074429;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
